# cookiecutter-pypackage

./: .bumpversion.cfg  .gitignore  .travis.yml  CONTRIBUTING.rst  Pipfile  README.rst  cookiecutter.json  pyproject.toml  setup.py  tox.ini
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .flake8  .gitignore  CONTRIBUTING.rst  Dockerfile  Makefile  Pipfile  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
