[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.1.0"
description = ""
authors = ["Fred Campos <fred.tecnologia@gmail.com>"]

[tool.poetry.dependencies]
pip = ">=20.1.0"
python = "^3.6"

[tool.poetry.dev-dependencies]
cookiecutter = ">=1.4.0"
pytest = ">=5.2"
pytest-cookies = ">=0.5.1"
python-language-server = {version = ">=0.31.10", extras = ["all"]}
pyyaml = ">=5.3.1"
tox = ">=3.14.1"
watchdog = ">=0.9.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
