[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.1.0"
description = "Cookiecutter template for pypackage using poetry as build tool"
authors = ["Fred Campos <fred.tecnologia@gmail.com>"]

[tool.poetry.dependencies]
pip = ">=20.1.0"
python = "^3.6"

[tool.poetry.dev-dependencies]
cookiecutter = ">=1.4.0"
pytest = ">=5.2"
pytest-cookies = ">=0.5.1"
pyyaml = ">=5.3.1"
tox = ">=3.14.1"
watchdog = ">=0.9.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
